[package]
name = "memtester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
sysinfo = { version = "0.15", default-features = false } 
num_cpus = "1.0"  # 获取CPU核心数
chrono = "0.4"  # 时间格式化
regex = "1.0"  # 正则表达式支持
lazy_static = "1.4"  # 静态变量初始化
rand = "0.8"  # 随机数生成
